apps-config/environment/local-dev/manifests/sample-guestbook/redis.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-guestbook-backend
  namespace: sample-guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-guestbook-backend
  namespace: sample-guestbook
spec:
  selector:
    app: redis
  ports:
    - port: 6379
