apps-config/environment/local-dev/manifests/sample-guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-backend
  namespace: sample-guestbook
spec:
  selector:
    app: guestbook
  ports:
    - port: 80        
      targetPort: 3000 
      protocol: TCP
  type: ClusterIP
